--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # Experiment configuration
 experiment:
-  name: Transformer_Dueling_DDQN_FOMDP
+  name: Transformer_Dueling_DDQN_POMDP
   model_dir: models
   model_name: POMDP
   result_dir: results
@@ -10,35 +10,37 @@ experiment:
 # Training configuration
 train:
   seeds: [12, 34, 56, 78, 90]
-  batch_size: 1
+  batch_size: 32
   learning_rate: 0.0005
   optimizer: rms_prop
   max_gradient_norm: inf
-  n_warmup_batches: 5
+  n_warmup_batches: 2
   update_target_every_steps: 10
   tau: 0.1
 
 # Network configuration
 network:
-  seq_len: 1
-  in_dim: 1
-  num_layers: 1
+  seq_len: 64
+  in_dim: 64
+  num_layers: 4
 
 # Environment configuration
 env:
-  version: v0
+  version: v1
+  goal_mean_100_reward: 475
+  # version: v0
+  # goal_mean_100_reward: 190
   mdp: POMDP
   render: False
 
 # Agent configuration
 agent:
-  gamma: 1.00
+  gamma: 0.99
   max_minutes: 2000
-  max_episodes: 300
-  goal_mean_100_reward: 475
+  max_episodes: 10000
 
 # Strategy configuration
 strategy:
-  init_epsilon: 1.0
-  min_epsilon: 0.3
+  init_epsilon: 0.9
+  min_epsilon: 0.1
   decay_steps: 20000
